--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
         <div class="actions">
           <button id="btn-correct" class="btn good" type="button">Richtig</button>
           <button id="btn-wrong" class="btn bad" type="button">Falsch</button>
-          <button id="btn-next-q" class="btn neutral" type="button">Nächste Frage</button>
         </div>
       </div>
 
@@ -99,9 +98,8 @@
     </section>
   </main>
 
-  <!-- Fragen-Pool: eigene Datei -->
+  <!-- Fragen-Pool -->
   <script src="questions.js" defer></script>
-  <!-- Spiel-Logik -->
   <script src="main.js" defer></script>
 </body>
 </html>
