--- a/index.html
+++ b/index.html
@@ -98,8 +98,9 @@
     </section>
   </main>
 
-  <!-- Fragen-Pool -->
+  <!-- Fragen-Pool: eigene Datei -->
   <script src="questions.js" defer></script>
+  <!-- Spiel-Logik -->
   <script src="main.js" defer></script>
 </body>
 </html>
